--- a/PullToRefreshLibrary/src/main/res/values/ids.xml
+++ b/PullToRefreshLibrary/src/main/res/values/ids.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <item name="gridview" type="id"></item>
+    <item name="gridview" type="id" />
+    <item name="webview" type="id" />
+    <item name="scrollview" type="id" />
+    <item name="viewpager" type="id" />
+    <item name="selected_view" type="id" />
 
-    <item name="webview" type="id"></item>
-    <item name="scrollview" type="id"></item>
-    <item name="viewpager" type="id"></item>
-    <item name="selected_view" type="id"></item>
-
-    <item name="done" type="id">false</item>
-    <item name="date_picker_header" type="id">false</item>
-    <item name="day_picker_selected_date_layout" type="id">false</item>
-    <item name="date_picker_month_and_day" type="id">false</item>
-    <item name="date_picker_month" type="id">false</item>
-    <item name="date_picker_day" type="id">false</item>
-    <item name="date_picker_year" type="id">false</item>
-    <item name="animator" type="id">false</item>
-    <item name="month_text_view" type="id">false</item>
-
-    <item name="ultimate_recycler_view" type="id"></item>
+    <item name="done" type="id" />
+    <item name="date_picker_header" type="id"/>
+    <item name="day_picker_selected_date_layout" type="id"/>
+    <item name="date_picker_month_and_day" type="id"/>
+    <item name="date_picker_month" type="id"/>
+    <item name="date_picker_day" type="id"/>
+    <item name="date_picker_year" type="id"/>
+    <item name="animator" type="id"/>
+    <item name="month_text_view" type="id"/>
+    <item name="ultimate_recycler_view" type="id" />
 
 </resources>
